correção do retorno do pegarMsgsEnviadas e pegarMinhasMsgs